sorted the footer bug on mobile

--- a/style.css
+++ b/style.css
@@ -189,7 +189,8 @@ body::before {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100px;
+  height: 100%;
+  flex-wrap: wrap;
   background-color: #f5f6f8;
   box-shadow: 0px -3px 10px rgb(221, 221, 221);
 }
@@ -200,9 +201,6 @@ body::before {
   justify-content: center;
 }
 
-.links {
-  flex: 2;
-}
 .social {
   display: flex;
   justify-content: center;
@@ -231,16 +229,25 @@ div.social > * {
   margin: 1rem;
 }
 
-@media only screen and (max-width: 468px) {
+@media only screen and (max-width: 920px) {
   .ios,
   .mac {
     margin: 1rem 0rem;
+    flex: 1;
   }
+
+  .header {
+    margin: 20rem 0rem;
+    padding-bottom: 10rem;
+  }
+
   .header,
   .services,
   .tablet,
   .advantages,
-  .sponsors-logo {
+  .sponsors-logo,
+  .container,
+  .services-description {
     flex-wrap: wrap;
   }
   .title {
@@ -250,14 +257,29 @@ div.social > * {
   .img-devices {
     width: 100%;
     padding: 1rem;
+    overflow: hidden;
   }
   .advantages {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .advantage-title {
     font-size: 2rem;
   }
   .advantage-description {
     font-size: 1.5rem;
+  }
+  .footer,
+  .links {
+    flex: 3;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .desktopscreen {
+    max-width: 100%;
   }
 }
